package enums;
/* enum is a special class that represents a group of constants
 * enum can be used to represent a set of named values
 * benefits readability and type safety
 */
public enum DifficultyLevel {
    EASY,
    MEDIUM,
    HARD
}
